@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=GtkEveMon
 Comment=EVE-Online Character Monitor
 Exec=gtkevemon
-Icon=gtkevemon.xpm
+Icon=gtkevemon
 Terminal=false
 X-MultipleArgs=false
 Type=Application
