@@ -1,70 +1,0 @@
-/* XPM */
-static char const* img_applogo_xpm[] = {
-"64 64 3 1",
-" 	c None",
-".	c #666666",
-"+	c #FFFFFF",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++............................................",
-"............++++++++............................................",
-"............++++++++............................................",
-"............++++++++............................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"............++++++++............................................",
-"............++++++++............................................",
-"............++++++++............................................",
-"............++++++++............................................",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"............++++++++++++++++++++++++++++++++++++++++............",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................",
-"................................................................"};
